# minbot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  core_lines.sh  docker-compose.yml  install.sh  pyproject.toml
.githooks/: pre-commit
minbot/: __main__.py  agent.py  bot.py  config.py  github.py  scheduler.py  worker.py
tests/: test_agent.py  test_bot.py  test_github.py  test_scheduler.py  test_worker.py
